--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ verify_ssl = true
 
 [packages]
 requests = "*"
-flask = "*"
+flask = {index = "https://mirrors.aliyun.com/pypi/simple/",version = "*"}
+cqp = "*"
 
 [requires]
 python_version = "3"
